--- a/package.json
+++ b/package.json
@@ -11,12 +11,20 @@
   },
   "dependencies": {
     "@tailwindcss/vite": "^4.1.11",
+    "@tsparticles/all": "^3.8.1",
+    "@tsparticles/react": "^3.0.0",
+    "firebase": "^11.10.0",
     "motion": "^12.23.6",
+    "particles-bg": "^2.5.5",
     "react": "^19.1.0",
     "react-dom": "^19.1.0",
+    "react-hot-toast": "^2.5.2",
     "react-icons": "^5.5.0",
     "react-router": "^7.6.3",
-    "tailwindcss": "^4.1.11"
+    "react-tsparticles": "^2.12.2",
+    "sweetalert2": "^11.22.2",
+    "tailwindcss": "^4.1.11",
+    "tsparticles": "^3.8.1"
   },
   "devDependencies": {
     "@eslint/js": "^9.30.1",
