--- a/package.json
+++ b/package.json
@@ -10,9 +10,13 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@stripe/react-stripe-js": "^3.7.0",
+    "@stripe/stripe-js": "^7.5.0",
     "@tailwindcss/vite": "^4.1.11",
+    "@tanstack/react-query": "^5.83.0",
     "@tsparticles/all": "^3.8.1",
     "@tsparticles/react": "^3.0.0",
+    "axios": "^1.10.0",
     "firebase": "^11.10.0",
     "motion": "^12.23.6",
     "particles-bg": "^2.5.5",
@@ -22,6 +26,7 @@
     "react-icons": "^5.5.0",
     "react-router": "^7.6.3",
     "react-tsparticles": "^2.12.2",
+    "strip": "^3.0.0",
     "sweetalert2": "^11.22.2",
     "tailwindcss": "^4.1.11",
     "tsparticles": "^3.8.1"
