--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "@tsparticles/react": "^3.0.0",
     "axios": "^1.10.0",
     "firebase": "^11.10.0",
+    "lucide-react": "^0.525.0",
     "motion": "^12.23.6",
     "particles-bg": "^2.5.5",
     "react": "^19.1.0",
