--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "@tsparticles/all": "^3.8.1",
     "@tsparticles/react": "^3.0.0",
     "axios": "^1.10.0",
+    "browser-image-compression": "^2.0.2",
     "firebase": "^11.10.0",
     "lucide-react": "^0.525.0",
     "motion": "^12.23.6",
