--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
     "react-icons": "^5.5.0",
     "react-router": "^7.6.3",
     "react-tsparticles": "^2.12.2",
+    "recharts": "^3.1.0",
     "strip": "^3.0.0",
     "sweetalert2": "^11.22.2",
     "tailwindcss": "^4.1.11",
