--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "@tanstack/react-query": "^5.83.0",
     "@tsparticles/all": "^3.8.1",
     "@tsparticles/react": "^3.0.0",
+    "aos": "^2.3.4",
     "axios": "^1.10.0",
     "browser-image-compression": "^2.0.2",
     "firebase": "^11.10.0",
@@ -32,6 +33,7 @@
     "strip": "^3.0.0",
     "sweetalert2": "^11.22.2",
     "tailwindcss": "^4.1.11",
+    "three": "^0.178.0",
     "tsparticles": "^3.8.1"
   },
   "devDependencies": {
