--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "motion": "^12.23.6",
     "particles-bg": "^2.5.5",
     "react": "^19.1.0",
+    "react-countup": "^6.5.3",
     "react-dom": "^19.1.0",
     "react-hot-toast": "^2.5.2",
     "react-icons": "^5.5.0",
